[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/sprites/powerups/shield_form.png" type="Texture" id=1]
[ext_resource path="res://Scripts/shieldForm.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]

[node name="shield" type="Sprite"]
position = Vector2( 543.406, 874.883 )
scale = Vector2( 1.61001, 1.61001 )
texture = ExtResource( 1 )
script = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 39
collision_mask = 39

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
scale = Vector2( 20.0894, 20.0894 )
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_shape_entered" from="Area2D" to="." method="_on_Area2D_area_shape_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
